# nft-gas-cost

./: .gitignore  README.md
aptos/: Move.toml  test.sh
aptos/.aptos/: config.yaml
aptos/sources/: nft.move
evm/: Makefile  README.md  foundry.toml  remappings.txt
evm/src/: ERC721.sol  ERC721A.sol
evm/test/: Gas.t.sol
near/: .gitignore  Cargo.toml  README.md  test.sh
near/gas-test/: Cargo.toml  README.md
near/gas-test/src/: main.rs
near/nep171/: Cargo.toml  README.md
near/nep171/src/: lib.rs
src/: ERC721Enumerable.sol
