[package]
name = "gas-test"
version = "1.0.0"
publish = false
edition = "2018"

[dev-dependencies]
anyhow = "1.0.71"
near-sdk = "4.0.0"
borsh = "0.10.3"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0.96", features = ["arbitrary_precision"] }
maplit = "1.0.2"
near-units = "0.2.0"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
pkg-config = "0.3.27"
workspaces = "0.7.0"

[[example]]
name = "gas-test"
path = "src/main.rs"

[dependencies]
near-sdk = "4.0.0"
